Agregando Resumen de calificacion al jefe

--- a/app/views/empleado/evaluacion/index.html
+++ b/app/views/empleado/evaluacion/index.html
@@ -44,10 +44,10 @@
 					  
 					  	<div class="card-body">
 					    	<div class="form-group">
-					    		<p><b>Nombre: </b></p>
-					    		<p><b>Apellido: </b></p>
-					    		<p><b>Nucleo: </b></p>
-					    		<p><b>Unidad: </b></p>
+					    		<p><b>Nombre: </b><%= user.nombre %></p>
+					    		<p><b>Apellido: </b><%= user.apellido %></p>
+					    		<p><b>Nucleo: </b><%= user.nucleoCodigo %></p>
+					    		<p><b>Unidad: </b><%= user.unidadCodigo %></p>
 					    	</div>
 					  	</div>
 					</div>
