--- a/app/views/index/login.html
+++ b/app/views/index/login.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+	<!-- Custom styles for this template -->
+    <link href="css/sticky-footer-navbar.css" rel="stylesheet">
+
 	<!--======estilo para el error=====-->
 	<style>
         label.error{
@@ -16,26 +19,27 @@
 	<!--======fin estilo para el error=====-->
 </head>
 <body>
-	<div class="container">
-		<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
-			  <img src="images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
-		</div>
+	<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
+		<img src="images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
+	</div>
 
-		<%- include('../partials/index/navbar.html') %>
-
+	<%- include('../partials/index/navbar.html') %>
+	
+	<div class="container-fluid">
+		<br>
 		<!--=======MIGAS DE PAN=========-->
-		<nav aria-label="breadcrumb" style="margin-top: 1%">
+		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 			   	<li class="breadcrumb-item" aria-current="page"><a href="/">Home</a></li>
 			   	<li class="breadcrumb-item active" aria-current="page"><a href="#">Login</a></li>
 			</ol>
 		</nav>
 		<!--=======FIN MIGAS DE PAN=========-->
-
 		
+		<br>
 		
 		<div class="row justify-content-md-center">
-			<div class="col-md-8">
+			<div class="col-md-4">
 				<!--=======mensaje de alerta==========-->
 				<% if(error == false) {%>
 
@@ -48,7 +52,6 @@
 		            </div>
 				<%}%>
 				<!--=======fin mensaje de alerta==========-->
-
 				<div class="card">
 				  	<div class="card-header">
 				    	Inicio de Sesion
@@ -76,13 +79,13 @@
 		</div>
 
 		<br>
-
-		<footer class="footer" style="background: #BEBCB0">
-			<div class="container">
-				<span class="text-muted">Pie de Pagina</span>
-			</div>
-		</footer>
 	</div>
+
+	<footer class="footer" style="background: #BEBCB0;">
+		<div class="container">
+			<span class="text-muted">Pie de Pagina</span>
+		</div>
+	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
