--- a/app/views/coord_plani/evaluacion/planificar.html
+++ b/app/views/coord_plani/evaluacion/planificar.html
@@ -3,13 +3,112 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CREDIUDO | Coord. Planificación</title>
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- Custom styles for this template -->
+    <link href="/css/sticky-footer-navbar.css" rel="stylesheet">
 </head>
 <body>
+	<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
+		<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
+	</div>	
+
+	<%- include('../../partials/coord_plani/navbar.html') %>
+
+	<div class="container-fluid">
+		<div class="row justify-content-md-center">
+			<div class="col-md-10">
+				<div class="row">
+					<div class="col-md-12">
+						<!--=======MIGAS DE PAN=========-->
+						<nav aria-label="breadcrumb" style="margin-top: 1%">
+							<ol class="breadcrumb">
+							    <li class="breadcrumb-item active" aria-current="page">Home</li>
+							    <li class="breadcrumb-item active" aria-current="page">Planificar Evaluación</li>
+							</ol>
+						</nav>
+						<!--=======FIN MIGAS DE PAN=========-->
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-2">
+						<div class="card">
+						  	<div class="card-header">
+						    	Datos Personales:
+						  	</div>
+						  
+						  	<div class="card-body">
+						    	<div class="form-group">
+						    		<p><b>Nombre: </b></p>
+						    		<p><b>Apellido: </b></p>
+						    		<p><b>Nucleo: </b></p>
+						    		<p><b>Unidad: </b></p>
+						    	</div>
+						  	</div>
+						</div>
+					</div>
+
+					<div class="col-md-10">
+						<div class="row">
+							<div class="col-md-12">
+								<div class="jumbotron jumbotron-fluid">
+									<div class="container">
+								    	<h1 class="display-5">Bienvenido(a) </h1>
+								    	<p class="lead">Coord. de Planificación</p>
+								  	</div>
+								</div>
+							</div>
+
+							<div class="col-md-6">
+								<div class="card">
+									<div class="card-header">
+										Planificar Evaluación
+									</div>
+									<div class="card-body">
+										<form method="post" action="/coord_plani/plani_eval" id="formEvaluacion">
+											<div class="form-group">
+												<label>Personal a Evaluar:</label>
+												<select name="categoria" id="categoria" class="form-control">
+													<option value=""> --Seleccione una Opción-- </option>
+													<% for(var i = 0; i < Categorias.length; i ++) {%>
+														<option value="<%= Categorias[i].id %>"><%= Categorias[i].nombre %></option>
+													<%}%>
+												</select>
+											</div>
+
+											<div class="form-group">
+												<label>Nucleo: </label>
+												<select name="nucleo" id="nucleo" class="form-control">
+													<option value=""> --Seleccione una Opción-- </option>
+													<% for(var j = 0; j < Nucleos.length; j ++) {%>
+														<option value="<%= Nucleos[j].codigo %>"><%= Nucleos[j].nombre %></option>
+													<%}%>
+												</select>
+											</div>
+
+											<hr>
+
+											<input type="submit" name="aceptar" value="Aceptar" class="btn btn-primary btn-block">
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+<!--
 	<h3>Planificar Evaluación</h3>
 	<br>
 	
 	<form method="post" action="/coord_plani/plani_eval" id="formEvaluacion">
-		<!--
+		
 		<label>Nombre de la Evaluacion:</label>
 		<input type="text" name="nombre">
 
@@ -20,7 +119,7 @@
 
 		<label>Fecha de Fin:</label>
 		<input type="date" name="fecha_f">
-		-->
+		
 		<br><br>
 
 		<label>Personal a Evaluar: </label>
@@ -45,6 +144,18 @@
 
 		<input type="submit" name="guardar" value="Guardar">	
 	</form>
+	-->
 	
+	<footer class="footer" style="background: #BEBCB0;">
+		<div class="container">
+			<span class="text-muted">Pie de Pagina</span>
+		</div>
+	</footer>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/jquery.validate.min.js"></script>
+	<script src="/js/main.js"></script>
 </body>
 </html>
