--- a/app/views/empleado/evaluacion/index.html
+++ b/app/views/empleado/evaluacion/index.html
@@ -5,6 +5,8 @@
 		<title>CREDIUDO | Dashboard</title>
 
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+		<!-- Custom styles for this template -->
+    	<link href="/css/sticky-footer-navbar.css" rel="stylesheet">
 
 		<!--estilo a mensaje de error-->
 	    <style type="text/css">
@@ -19,120 +21,126 @@
 	</head>
 
 	<body>
-		<div class="container">
-			<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
-				<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
-			</div>	
+		<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
+			<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
+		</div>	
 
-			<%- include('../../partials/empleado/navbar.html') %>
+		<%- include('../../partials/empleado/navbar.html') %>
+		
+		<div class="container-fluid">
+			<div class="row justify-content-md-center">
+				<div class="col-md-10">
+					<div class="row">
+						<div class="col-md-12">
+							<!--=======MIGAS DE PAN=========-->
+							<nav aria-label="breadcrumb" style="margin-top: 1%">
+								<ol class="breadcrumb">
+								    <li class="breadcrumb-item" aria-current="page"><a href="/dashboard">Home</a></li>
+								    <li class="breadcrumb-item" aria-current="page"><a href="">Evaluación</a></li>
+								</ol>
+							</nav>
+							<!--=======FIN MIGAS DE PAN=========-->
+						</div>
 
-			<!--=======MIGAS DE PAN=========-->
-			<nav aria-label="breadcrumb" style="margin-top: 1%">
-				<ol class="breadcrumb">
-				    <li class="breadcrumb-item" aria-current="page"><a href="/dashboard">Home</a></li>
-				    <li class="breadcrumb-item" aria-current="page"><a href="">Evaluación</a></li>
-				</ol>
-			</nav>
-			<!--=======FIN MIGAS DE PAN=========-->
+						<div class="col-md-2">
+							<div class="card">
+							  	<div class="card-header">
+							    	Datos Personales:
+							  	</div>
+							  
+							  	<div class="card-body">
+							    	<div class="form-group">
+							    		<p><b>Nombre: </b><%= user.nombre %></p>
+							    		<p><b>Apellido: </b><%= user.apellido %></p>
+							    		<p><b>Nucleo: </b><%= user.nucleoCodigo %></p>
+							    		<p><b>Unidad: </b><%= user.unidadCodigo %></p>
+							    	</div>
+							  	</div>
+							</div>
 
-			<div class="row">
-				<div class="col-md-3">
-					<div class="card">
-					  	<div class="card-header">
-					    	Datos Personales:
-					  	</div>
-					  
-					  	<div class="card-body">
-					    	<div class="form-group">
-					    		<p><b>Nombre: </b><%= user.nombre %></p>
-					    		<p><b>Apellido: </b><%= user.apellido %></p>
-					    		<p><b>Nucleo: </b><%= user.nucleoCodigo %></p>
-					    		<p><b>Unidad: </b><%= user.unidadCodigo %></p>
-					    	</div>
-					  	</div>
+							<br>
+
+							<div class="card">
+							  	<div class="card-header">
+							    	¿Sabes como Evaluar?
+							  	</div>
+							  
+							  	<div class="card-body">
+							    	<div class="form-group">
+							    		<p><b>Nombre: </b></p>
+							    		<p><b>Apellido: </b></p>
+							    		<p><b>Nucleo: </b></p>
+							    		<p><b>Unidad: </b></p>
+							    	</div>
+							  	</div>
+							</div>
+						</div>
+
+						<div class="col-md-10">
+							<form method="post" action="/dashboard/evaluacion/<%=Evaluacion.id%>/u/<%=Usuario.cedula%>/ue/<%= evaluacionUsuario.usuarioEvaluado %>" id="formEvaluacion">
+								<input type="hidden" name="factores" value=<%=instrumentFactor.length%>>
+								<input type="hidden" name="items" value="<%=Items.length%>">
+								<input type="hidden" name="instrumentId" value="<%=Evaluacion.instrumentId%>">
+								<input type="hidden" name="usuarioEvaluado" value="<%= evaluacionUsuario.usuarioEvaluado %>">
+
+								<table class="table">
+									<% var n=0 %>
+									<% var k=-1 %>
+									<% var item = [] %>
+									
+									<%for(var i = 0; i < instrumentFactor.length; i ++){%>
+								    	<tr class="thead-dark">
+								      		<th width="5%">#</th>
+								      		<th scope="col"><%=instrumentFactor[i].factor.nombre%></th>
+								      		<th>2 ptos</th>
+								      		<th>4 ptos</th>
+								      		<th>6 ptos</th>
+								      		<th>8 ptos</th>
+								      		<th>10 ptos</th>
+								    	</tr>
+								    	<% var k=0 %>
+								    	<% for(var j = 0; j < Items.length; j ++) {%>
+											<%if(Items[j].factorId == instrumentFactor[i].factorId){%>
+												<tr>
+											    	<td width="5%"></td>
+											    	<td><%=Items[j].nombre%></td> 
+											    	<td>
+											    		<input type="radio" name="item[<%= j %>]" value=2 id="item" required>
+											    	</td>
+											    	<td>
+											    		<input type="radio" name="item[<%= j %>]" value=4 id="item" required>
+											    	</td>
+											    	<td>
+											    		<input type="radio" name="item[<%= j %>]" value=6 id="item" required>
+											    	</td>
+											    	<td>
+											    		<input type="radio" name="item[<%= j %>]" value=8 id="item" required>
+											    	</td>
+											    	<td>
+											    		<input type="radio" name="item[<%= j %>]" value=10 id="item" required>
+											    	</td>
+											  	</tr>
+											  	<% k=k+1 %>
+											<%}%>
+								    	<%}%>
+								  	<%}%>
+								</table>
+								<hr>
+								<input type="submit" class="btn btn-primary btn-lg btn-block" name="enviar" value="Finalizar">
+							</form>
+						</div>
 					</div>
-
-					<br>
-
-					<div class="card">
-					  	<div class="card-header">
-					    	¿Sabes como Evaluar?
-					  	</div>
-					  
-					  	<div class="card-body">
-					    	<div class="form-group">
-					    		<p><b>Nombre: </b></p>
-					    		<p><b>Apellido: </b></p>
-					    		<p><b>Nucleo: </b></p>
-					    		<p><b>Unidad: </b></p>
-					    	</div>
-					  	</div>
-					</div>
-				</div>
-
-				<div class="col-md-9">
-					<form method="post" action="/dashboard/evaluacion/<%=Evaluacion.id%>/u/<%=Usuario.cedula%>/ue/<%= evaluacionUsuario.usuarioEvaluado %>" id="formEvaluacion">
-						<input type="hidden" name="factores" value=<%=instrumentFactor.length%>>
-						<input type="hidden" name="items" value="<%=Items.length%>">
-						<input type="hidden" name="instrumentId" value="<%=Evaluacion.instrumentId%>">
-						<input type="hidden" name="usuarioEvaluado" value="<%= evaluacionUsuario.usuarioEvaluado %>">
-
-						<table class="table">
-							<% var n=0 %>
-							<% var k=-1 %>
-							<% var item = [] %>
-							
-							<%for(var i = 0; i < instrumentFactor.length; i ++){%>
-						    	<tr class="thead-dark">
-						      		<th width="5%">#</th>
-						      		<th scope="col"><%=instrumentFactor[i].factor.nombre%></th>
-						      		<th>2 ptos</th>
-						      		<th>4 ptos</th>
-						      		<th>6 ptos</th>
-						      		<th>8 ptos</th>
-						      		<th>10 ptos</th>
-						    	</tr>
-						    	<% var k=0 %>
-						    	<% for(var j = 0; j < Items.length; j ++) {%>
-									<%if(Items[j].factorId == instrumentFactor[i].factorId){%>
-										<tr>
-									    	<td width="5%"></td>
-									    	<td><%=Items[j].nombre%></td> 
-									    	<td>
-									    		<input type="radio" name="item[<%= j %>]" value=2 id="item" required>
-									    	</td>
-									    	<td>
-									    		<input type="radio" name="item[<%= j %>]" value=4 id="item" required>
-									    	</td>
-									    	<td>
-									    		<input type="radio" name="item[<%= j %>]" value=6 id="item" required>
-									    	</td>
-									    	<td>
-									    		<input type="radio" name="item[<%= j %>]" value=8 id="item" required>
-									    	</td>
-									    	<td>
-									    		<input type="radio" name="item[<%= j %>]" value=10 id="item" required>
-									    	</td>
-									  	</tr>
-									  	<% k=k+1 %>
-									<%}%>
-						    	<%}%>
-						  	<%}%>
-						</table>
-						<hr>
-						<input type="submit" class="btn btn-primary btn-lg btn-block" name="enviar" value="Finalizar">
-					</form>
 				</div>
 			</div>
-
-			<br>
-
-			<footer class="footer" style="background: #BEBCB0">
-				<div class="container">
-					<span class="text-muted">Pie de Pagina</span>
-				</div>
-			</footer>
 		</div>
+			
+		<br>
+
+		<footer class="footer" style="background: #BEBCB0;">
+			<div class="container">
+				<span class="text-muted">Pie de Pagina</span>
+			</div>
+		</footer>
 		<!--
 		<h2>CREDIUDO | Evaluación</h2>
 		<h4>Bienvendio <%= Usuario.nombre %></h4>
