mejorando vistas del coord planificacion

--- a/app/views/partials/coord_plani/navbar.html
+++ b/app/views/partials/coord_plani/navbar.html
@@ -21,7 +21,7 @@
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 					<a class="dropdown-item" href="/coord_plani/plani_eval">Planificar</a>
 					<a class="dropdown-item" href="/coord_plani/eval_encurso">En Curso</a>
-					<a class="dropdown-item" href="#">Culminada</a>
+					<a class="dropdown-item" href="/coord_plani/eval_culminado">Culminada</a>
 				</div>
 			</li>
 			      
