--- a/app/views/coord_plani/evaluacion/eval_culminado.html
+++ b/app/views/coord_plani/evaluacion/eval_culminado.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CREDIUDO | Coord. Planificación</title>
-
 	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Custom styles for this template -->
@@ -16,7 +15,7 @@
 
 	<%- include('../../partials/coord_plani/navbar.html') %>
 
-	<div class="conatiner-fluid">
+	<div class="container-fluid">
 		<div class="row justify-content-md-center">
 			<div class="col-md-10">
 				<div class="row">
@@ -25,7 +24,7 @@
 						<nav aria-label="breadcrumb" style="margin-top: 1%">
 							<ol class="breadcrumb">
 							    <li class="breadcrumb-item active" aria-current="page">Home</li>
-							    <li class="breadcrumb-item active" aria-current="page">Evaluaciones en Curso</li>
+							    <li class="breadcrumb-item active" aria-current="page">Planificar Evaluación</li>
 							</ol>
 						</nav>
 						<!--=======FIN MIGAS DE PAN=========-->
@@ -53,54 +52,44 @@
 					<div class="col-md-9">
 						<div class="row">
 							<div class="col-md-12">
-								<!--=======mensaje de alerta==========-->
-								<% if(message == false) {%>
-
-								<%} else {%>
-									<div class="alert alert-success alert-dismissible fade show" role="alert">
-							            <%= message %>
-							            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-											<span aria-hidden="true">&times;</span>
-										</button>
-							        </div>
-								<%}%>
-								<!--=======fin mensaje de alerta==========-->
-								
 								<div class="card">
 									<div class="card-body">
-										<h3>Evaluaciones en Curso</h3>
+										<h3>Evaluaciones Culminadas</h3>
 										<hr>
-										<table class="table">
-											<thead>
-												<tr>
-													<th scope="col">Nombre</th>
-										      		<th scope="col">Fecha I</th>
-										      		<th scope="col">Fecha F</th>
-										      		<th scope="col">Status</th>
-												</tr>
 
-												<% for(let i = 0; i < Evaluacion.length; i ++) {%>
-													<tr>
-														<td><%= Evaluacion[i].nombre %></td>
-														<td><%= Evaluacion[i].fecha_i.getDate() %>/<%= Evaluacion[i].fecha_i.getMonth() + 1 %>/<%= Evaluacion[i].fecha_i.getFullYear() %></td>
-														<td><%= Evaluacion[i].fecha_f.getDate() %>/<%= Evaluacion[i].fecha_f.getMonth() + 1 %>/<%= Evaluacion[i].fecha_f.getFullYear() %></td>
-														<td>En Curso</td>
-													</tr>
-												<%}%>
-											</thead>
+										<table class="table">
+										  	<thead>
+										    	<tr>
+										      		<th scope="col">Nombre</th>
+										      		<th scope="col">Nucleo</th>
+										      		<th scope="col">Unidad</th>
+										      		<th scope="col">Fecha F</th>
+										      		<th scope="col">Operación</th>
+										    	</tr>
+										  	</thead>
+										  
+										  	<tbody>
+										  		<% for(let i = 0; i < Evaluacion.length; i ++) {%>
+											    	<tr>
+											      		<td><%= Evaluacion[i].nombre %></td>
+											      		<td><%= Evaluacion[i].nucleoCodigo %></td>
+											      		<td><%= Evaluacion[i].unidadCodigo %></td>
+											      		<td><%= Evaluacion[i].fecha_f.getDate() %>/<%= Evaluacion[i].fecha_f.getMonth() + 1 %>/<%= Evaluacion[i].fecha_f.getFullYear() %></td>
+											      		<td></td>
+											    	</tr>
+										    	<%}%>
+										  	</tbody>
 										</table>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-
-					
 				</div>
 			</div>
 		</div>
 	</div>
-
+	
 	<footer class="footer" style="background: #BEBCB0;">
 		<div class="container">
 			<span class="text-muted">Pie de Pagina</span>
